Changing build.xml to trigger poll and auto build

--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <project name="Dashboard_app" basedir=".">
   <description>
-    simple example build file
+    First build file
   </description>
   <!-- set global properties for this build -->
   <property name="src" location="src"/>
