--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,6 @@
 <project name="Dashboard_app" basedir=".">
   <description>
-    First build file
+   Sample build file
   </description>
   <!-- set global properties for this build -->
   <property name="src" location="src"/>
