Update group names

--- a/project.config
+++ b/project.config
@@ -3,21 +3,21 @@
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
-	owner = group user/rkhpe
+	owner = group user/rkhpe (rkhpe)
 [access "refs/for/refs/*"]
-	read = group user/rkhpe
-	push = group user/rkhpe
-	label-Code-Review = -2..+2 group user/rkhpe
-	label-Verified = -1..+1 group user/rkhpe
-	rebase = group user/rkhpe
-	removeReviewer = group user/rkhpe
-	submit = group user/rkhpe
+	read = group user/rkhpe (rkhpe)
+	push = group user/rkhpe (rkhpe)
+	label-Code-Review = -2..+2 group user/rkhpe (rkhpe)
+	label-Verified = -1..+1 group user/rkhpe (rkhpe)
+	rebase = group user/rkhpe (rkhpe)
+	removeReviewer = group user/rkhpe (rkhpe)
+	submit = group user/rkhpe (rkhpe)
 [access "refs/heads/*"]
-	read = group user/rkhpe
-	create = group user/rkhpe
-	push = +force group user/rkhpe
-	pushMerge = group user/rkhpe
+	read = group user/rkhpe (rkhpe)
+	create = group user/rkhpe (rkhpe)
+	push = +force group user/rkhpe (rkhpe)
+	pushMerge = group user/rkhpe (rkhpe)
 [access "refs/tags/*"]
-	push = +force group user/rkhpe
-	pushTag = group user/rkhpe
-	pushSignedTag = group user/rkhpe
+	push = +force group user/rkhpe (rkhpe)
+	pushTag = group user/rkhpe (rkhpe)
+	pushSignedTag = group user/rkhpe (rkhpe)
